--- a/setup/templates/github/github-event-source-svc.yaml
+++ b/setup/templates/github/github-event-source-svc.yaml
@@ -26,7 +26,7 @@ spec:
         # This url must be reachable from outside the cluster.
         # The name for the service is in `<event-source-name>-eventsource-svc` format.
         # You will need to create an Ingress or Openshift Route for the event-source service so that it can be reached from GitHub.
-        url: {{ .Values.ingress.url }}
+        url: https://{{ .Values.ingress.url }}
       # type of events to listen to.
       # following listens to everything, hence *
       # You can find more info on https://developer.github.com/v3/activity/events/types/
@@ -44,7 +44,7 @@ spec:
         
       # type of the connection between event-source and Github.
       # You should set it to false to avoid man-in-the-middle and other attacks.
-      insecure: false
+      insecure: true
       # Determines if notifications are sent when the webhook is triggered
       active: true
       # The media type used to serialize the payloads
