--- a/setup/templates/github/github-event-source-svc.yaml
+++ b/setup/templates/github/github-event-source-svc.yaml
@@ -17,7 +17,7 @@ spec:
       # Github will send events to following port and endpoint
       webhook:
         # endpoint to listen to events on
-        endpoint: /push
+        endpoint: /argo-events/github/push
         # port to run internal HTTP server on
         port: "12000"
         # HTTP request method to allow. In this case, only POST requests are accepted
