--- a/setup/templates/github/github-sensor.yaml
+++ b/setup/templates/github/github-sensor.yaml
@@ -63,7 +63,7 @@ spec:
                     container:
                       image: docker/whalesay:latest
                       command: [cowsay]
-                      args: ["{{inputs.parameters.pr-title}}"]
+                      args: ["{{`{{inputs.parameters.pr-title}}`}}"]
           parameters:
             - src:
                 dependencyName: test-dep
@@ -75,12 +75,12 @@ spec:
               dest: spec.arguments.parameters.1.value
             - src:
                 dependencyName: test-dep
-                dataTemplate: "{{ .Input.body.pull_request.head.sha | substr 0 7 }}"
+                dataTemplate: "{{`{{ .Input.body.pull_request.head.sha | substr 0 7 }}`}}"
               dest: spec.arguments.parameters.2.value
             # Append pull request number and short sha to dynamically assign worklfow name <github-21500-2c065a>
             - src:
                 dependencyName: test-dep
-                dataTemplate: "{{ .Input.body.pull_request.number }}-{{ .Input.body.pull_request.head.sha | substr 0 7 }}"
+                dataTemplate: "{{`{{ .Input.body.pull_request.number }}`}}-{{`{{ .Input.body.pull_request.head.sha | substr 0 7 }}`}}"
               dest: metadata.name
               operation: append
       retryStrategy:
