--- a/setup/templates/github/github-event-source.yaml
+++ b/setup/templates/github/github-event-source.yaml
@@ -9,7 +9,7 @@ spec:
       - port: 12000
         targetPort: 12000
   github:
-    example:
+    docker:
       repositories:
         - owner: Open-Dataplatform
           names:
