--- a/setup/templates/github/github-sensor.yaml
+++ b/setup/templates/github/github-sensor.yaml
@@ -8,7 +8,7 @@ spec:
   dependencies:
     - name: test-dep
       eventSourceName: github
-      eventName: example
+      eventName: docker
       filters:
         data:
           # Name of the event that triggered the delivery: [pull_request, push, yadayadayada]
