--- a/setup/templates/github/github-sa.yaml
+++ b/setup/templates/github/github-sa.yaml
@@ -10,11 +10,23 @@ metadata:
   name: operate-workflow-role
 rules:
 - apiGroups:
-  - ""
+  - argoproj.io
   resources:
+  - eventsources
+  - sensors
   - workflows
+  - workfloweventbindings
+  - workflowtemplates
+  - cronworkflows
+  - clusterworkflowtemplates
   verbs:
   - create
+  - get
+  - list
+  - watch
+  - update
+  - patch
+  - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
