--- a/setup/templates/azure-event-bus/azure-eventhub-storage-account-webhook.yaml
+++ b/setup/templates/azure-event-bus/azure-eventhub-storage-account-webhook.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: EventSource
 metadata:
-  name: azure-storage-test
+  name: webhook
 spec:
   service:
     ports:
