--- a/setup/templates/azure-event-bus/azure-sensor-storage-account.yaml
+++ b/setup/templates/azure-event-bus/azure-sensor-storage-account.yaml
@@ -7,7 +7,7 @@ spec:
     serviceAccountName: operate-workflow-sa
   dependencies:
     - name: test-dep
-      eventSourceName: azure-storage-test
+      eventSourceName: webhook
       eventName: example
   triggers:
     - template:
