--- a/events-github/templates/github-sensor.yaml
+++ b/events-github/templates/github-sensor.yaml
@@ -7,7 +7,7 @@ spec:
     serviceAccountName: operate-workflow-sa
   dependencies:
     - name: pr-dockerbuild
-      eventSourceName: github
+      eventSourceName: github-pr
       eventName: pull-request
       filters:
         data:
