--- a/events-github/templates/github-sensor.yaml
+++ b/events-github/templates/github-sensor.yaml
@@ -66,20 +66,20 @@ spec:
                       args: ["{{`{{inputs.parameters.pr-title}}`}}"]
           parameters:
             - src:
-                dependencyName: test-dep
+                dependencyName: pr-dockerbuild
                 dataKey: body.pull_request.title
               dest: spec.arguments.parameters.0.value
             - src:
-                dependencyName: test-dep
+                dependencyName: pr-dockerbuild
                 dataKey: body.pull_request.number
               dest: spec.arguments.parameters.1.value
             - src:
-                dependencyName: test-dep
+                dependencyName: pr-dockerbuild
                 dataTemplate: "{{`{{ .Input.body.pull_request.head.sha | substr 0 7 }}`}}"
               dest: spec.arguments.parameters.2.value
             # Append pull request number and short sha to dynamically assign worklfow name <github-21500-2c065a>
             - src:
-                dependencyName: test-dep
+                dependencyName: pr-dockerbuild
                 dataTemplate: "{{`{{ .Input.body.pull_request.number }}`}}-{{`{{ .Input.body.pull_request.head.sha | substr 0 7 }}`}}"
               dest: metadata.name
               operation: append
