add azure sensor

--- a/events-azure/templates/azure-event-source.yaml
+++ b/events-azure/templates/azure-event-source.yaml
@@ -4,7 +4,7 @@ metadata:
   name: azure-events-hub
 spec:
   azureEventsHub:
-    example:
+    storage-account:
       # FQDN of the EventsHub namespace you created
       # More info at https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-get-connection-string
       fqdn: argo-test.servicebus.windows.net
