--- a/events-azure/templates/azure-sensor.yaml
+++ b/events-azure/templates/azure-sensor.yaml
@@ -41,8 +41,8 @@ spec:
                       args: 
                       - |
                         apt install jq;
-                        msg={{`{{inputs.parameters.message}}`}};
-                        echo $msg | jq -r .data | base64 -di | jq -r .body | base64 -di | jq .
+                        msg="{{`{{inputs.parameters.message}}`}}";
+                        echo $msg;
                       
           parameters:
             - src:
