--- a/events-azure/templates/azure-sensor.yaml
+++ b/events-azure/templates/azure-sensor.yaml
@@ -46,5 +46,5 @@ spec:
           parameters:
             - src:
                 dependencyName: test-dep
-                dataTemplate: "{{` {{ .data }} `}}"
+                dataTemplate: "{{` {{ . }} `}}"
               dest: spec.arguments.parameters.0.value
