--- a/events-azure/templates/azure-sensor.yaml
+++ b/events-azure/templates/azure-sensor.yaml
@@ -41,7 +41,7 @@ spec:
                       args: 
                       - |
                         msg="{{`{{inputs.parameters.message}}`}}";
-                        echo $msg;
+                        echo "$msg";
                       
           parameters:
             - src:
