--- a/events-azure/templates/azure-sensor.yaml
+++ b/events-azure/templates/azure-sensor.yaml
@@ -40,8 +40,7 @@ spec:
                       command: ["/bin/sh", "-c"]
                       args: 
                       - |
-                        msg="{{`{{inputs.parameters.message}}`}}";
-                        echo "$msg";
+                        echo "{{`{{inputs.parameters.message}}`}}";
                       
           parameters:
             - src:
